--- a/Sentiment_Analysis_Clash_of_Clans.ipynb
+++ b/Sentiment_Analysis_Clash_of_Clans.ipynb
@@ -3308,8 +3308,7 @@
         "# Set seed agar hasil reproducible\n",
         "SEED = 0\n",
         "np.random.seed(SEED)\n",
-        "random.seed(SEED)\n",
-        "# tf.random.set_seed(SEED)"
+        "random.seed(SEED)\n"
       ],
       "metadata": {
         "id": "BthkdtAK1end"
